fix: removing th text-alignment and falling back to hardcoded HTML align

--- a/inst/includes/stylesheets/custom.css
+++ b/inst/includes/stylesheets/custom.css
@@ -189,7 +189,6 @@ table caption {
 }
 
 th {
-    text-align: left;
     padding: 4px 10px;
 }
 
